--- a/assignment_list_2/report.tex
+++ b/assignment_list_2/report.tex
@@ -223,7 +223,7 @@ Because of it Polynomial's coefficients are saved with rounding error. By lookin
     \end{tabular}
 \end{table}
 \subsubsection{Conclusions}
-If the coefficient of $x^{19}$ is decreased by $2^{-23}$ then some roots collided to double root. Leading to complex number and it's conjugated version. displayed as a root.
+If the coefficient of $x^{19}$ is decreased by $2^{-23}$ then some roots collided to double root. Leading to complex number and it's conjugated version.
 This further proves that Wilkinson's polynomial is very ill-conditioned.  
 \section{Exercise 5}
 Consider following reccurence equation that represents population growth
